style: fix input box min-width and truncate long customer names in CS Console to prevent text overlaps

--- a/src/app/ticket-resolution/cs-console/approval-queue/approval-queue.component.scss
+++ b/src/app/ticket-resolution/cs-console/approval-queue/approval-queue.component.scss
@@ -70,7 +70,7 @@
     }
     > div:nth-child(2) {
       flex: 1;
-      min-width: 200px;
+      min-width: 120px;
     }
     > div:nth-child(3) {
       order: 3;
